--- a/produtos.html
+++ b/produtos.html
@@ -51,40 +51,47 @@ const PHONE = "5567992018672";
 const app = initializeApp(firebaseConfig);
 const db = getFirestore(app);
 
-function esc(s) {
-  return String(s || '').replace(/[&<>"']/g, m =>
-    ({ '&': '&amp;', '<': '&lt;', '>': '&gt;', '"': '&quot;' }[m])
+// Segurança contra caracteres HTML
+function esc(s){
+  return String(s||'').replace(/[&<>"']/g, m =>
+    ({'&':'&amp;','<':'&lt;','>':'&gt;','"':'&quot;'}[m])
   );
 }
 
 const grid = document.getElementById('productsGrid');
 const q = query(collection(db, 'products'), orderBy('createdAt', 'desc'));
 
+let produtos = [];
+
 onSnapshot(q, snap => {
-  const arr = [];
-  snap.forEach(d => arr.push(d.data()));
-  render(arr, 'all');
-  document.querySelectorAll('.catBtn').forEach(btn => {
-    btn.onclick = () => render(arr, btn.dataset.cat);
-  });
+  produtos = [];
+  snap.forEach(d => produtos.push(d.data()));
+  render("all");
 }, err => {
-  grid.innerHTML = '<p>Erro ao carregar produtos.</p>';
+  grid.innerHTML = "<p>Erro ao carregar produtos.</p>";
   console.error(err);
 });
 
-function render(list, filter) {
-  grid.innerHTML = '';
-  list.forEach(p => {
-    if (!p.active) return;
-    if (filter !== 'all' && p.category !== filter) return;
+document.querySelectorAll(".catBtn").forEach(btn => {
+  btn.addEventListener("click", () => {
+    render(btn.dataset.cat);
+  });
+});
 
-    const img = p.imageUrl || p.image || 'placeholder.png';
+function render(cat){
+  grid.innerHTML = "";
+
+  produtos.forEach(p => {
+    if(!p.active) return;
+    if(cat !== "all" && p.category !== cat) return;
+
+    const img = p.imageUrl || p.image || "placeholder.png";
     const priceText = p.price
       ? `${p.currency || 'R$'} ${Number(p.price).toFixed(2)}`
-      : 'Consultar valores';
+      : "Consultar valores";
 
-    const el = document.createElement('div');
-    el.className = 'card';
+    const el = document.createElement("div");
+    el.className = "card";
     el.innerHTML = `
       <img src="${esc(img)}" alt="${esc(p.name)}">
       <h3>${esc(p.name)}</h3>
@@ -92,11 +99,11 @@ function render(list, filter) {
       <a class="botao buy">Comprar</a>
     `;
 
-    el.querySelector('.buy').addEventListener('click', () => {
-      const variantLabel = (p.type === 'pod') ? 'Sabor' : 'Cor';
-      const variant = (p.options && p.options[0]) ? p.options[0] : '-';
+    el.querySelector(".buy").addEventListener("click", () => {
+      const variantLabel = (p.type === "pod") ? "Sabor" : "Cor";
+      const variant = (p.options && p.options[0]) ? p.options[0] : "-";
       const text = encodeURIComponent(
-`Olá! Tenho interesse no produto: ${p.name}
+        `Olá! Tenho interesse no produto: ${p.name}
 Quantidade: 1
 ${variantLabel}: ${variant}
 Valor: ${priceText}
@@ -108,8 +115,8 @@ Forma de Pagamento: PIX`
     grid.appendChild(el);
   });
 
-  if (grid.children.length === 0) {
-    grid.innerHTML = '<p>Nenhum item nesta categoria.</p>';
+  if(grid.children.length === 0){
+    grid.innerHTML = "<p>Nenhum item nesta categoria.</p>";
   }
 }
 </script>
